# barbouse

./: .gitignore  README.md  pyproject.toml
barbouse/: barbouse.py  weather.json
