[tool.poetry]
name = "barbouse"
version = "0.1.2"
description = "Postman for bearded API users"
authors = ["Guillaume Pasquet <dev@etenil.net>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
jq = "^1.1.3"
requests = "^2.25.1"
Pygments = "^2.9.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
barbouse = "barbouse.barbouse:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
